Add batch post
