# backend/api/openapi.json
@@ -20,13 +20,23 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ]
       }
     },
     "/tracks/{track_id}/similar": {
       "get": {
         "summary": "Get Similar Tracks",
         "operationId": "get_similar_tracks_tracks__track_id__similar_get",
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "track_id",
@@ -66,6 +76,11 @@
       "post": {
         "summary": "Post Like Track",
         "operationId": "post_like_track_tracks__track_id__like_post",
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "track_id",
@@ -103,6 +118,11 @@
       "get": {
         "summary": "Get Peak",
         "operationId": "get_peak_peaks__track_id__get",
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "track_id",
@@ -138,6 +158,53 @@
         }
       }
     },
+    "/peaks": {
+      "post": {
+        "summary": "Get Peaks",
+        "operationId": "get_peaks_peaks_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "items": {
+                  "type": "string"
+                },
+                "type": "array",
+                "title": "Track Ids"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetPeakListSchema"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ]
+      }
+    },
     "/playlists/my": {
       "get": {
         "summary": "Get My Playlists",
@@ -153,13 +220,23 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ]
       }
     },
     "/playlists/{playlist_id}/tracks": {
       "get": {
         "summary": "Get Playlist Tracks",
         "operationId": "get_playlist_tracks_playlists__playlist_id__tracks_get",
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "playlist_id",
@@ -199,6 +276,11 @@
       "get": {
         "summary": "Search Playlists",
         "operationId": "search_playlists_playlists_get",
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "search",
@@ -238,6 +320,11 @@
       "get": {
         "summary": "Get Artist Tracks",
         "operationId": "get_artist_tracks_artists__artist_id__tracks_get",
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "artist_id",
@@ -277,6 +364,11 @@
       "get": {
         "summary": "Search Artists",
         "operationId": "search_artists_artists_get",
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "search",
@@ -373,6 +465,27 @@
         ],
         "title": "GetArtistsListSchema"
       },
+      "GetPeakListSchema": {
+        "properties": {
+          "count": {
+            "type": "integer",
+            "title": "Count"
+          },
+          "peaks": {
+            "items": {
+              "$ref": "#/components/schemas/GetPeakSchema"
+            },
+            "type": "array",
+            "title": "Peaks"
+          }
+        },
+        "type": "object",
+        "required": [
+          "count",
+          "peaks"
+        ],
+        "title": "GetPeakListSchema"
+      },
       "GetPeakSchema": {
         "properties": {
           "track_id": {
@@ -380,7 +493,14 @@
             "title": "Track Id"
           },
           "download_url": {
-            "type": "string",
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "Download Url"
           }
         },
@@ -567,6 +687,18 @@
           "type"
         ],
         "title": "ValidationError"
+      }
+    },
+    "securitySchemes": {
+      "OAuth2AuthorizationCodeBearer": {
+        "type": "oauth2",
+        "flows": {
+          "authorizationCode": {
+            "scopes": {},
+            "authorizationUrl": "auth",
+            "tokenUrl": "token"
+          }
+        }
       }
     }
   }
